Full-Stack-Chat-App/K8s/backend-deployment.yml
# backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image: "0x1luffy/3-tier-chat-app-kops:backend-v1"
        ports:
        - containerPort: 5001
