Full-Stack-Chat-App/K8s/frontend-deployment.yml
# frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image: "0x1luffy/3-tier-chat-app-kops:frontend-v1"
        ports:
        - containerPort: 80
